--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "mini-css-extract-plugin": "^0.9.0",
     "uglifyjs-webpack-plugin": "^1.2.7"
   }
 }
