--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "mini-css-extract-plugin": "^0.9.0",
     "style-loader": "^1.3.0",
+    "terser-webpack-plugin": "^1.4.5",
     "uglifyjs-webpack-plugin": "^1.2.7"
   }
 }
