--- a/package.json
+++ b/package.json
@@ -35,17 +35,18 @@
   },
   "homepage": "https://github.com/bottega-code-school/js-builder",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.6.0",
-    "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@fortawesome/react-fontawesome": "^0.2.2",
-    "ajv": "6.12.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.14",
+    "@fortawesome/free-solid-svg-icons": "^5.7.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
+    "ajv": "^5.5.2",
     "autoprefixer": "^9.1.0",
-    "axios": "^0.21.1",
+    "axios": "^0.18.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.5",
     "babel-plugin-async-to-promises": "^1.0.5",
+    "babel-plugin-transform-es2015-arrow-functions": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -53,49 +54,45 @@
     "copy-webpack-plugin": "^4.5.2",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.0",
-    "draft.js": "^0.2.0",
-    "draftjs-to-html": "^0.9.1",
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.4",
     "eslint": "^4.2.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-react": "^7.1.0",
-    "express": "4.17.1",
+    "express": "^4.16.3",
     "extract-loader": "^2.0.1",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
-    "html-to-draftjs": "^1.5.0",
+    "html-to-draftjs": "^1.4.0",
     "html-webpack-plugin": "^3.2.0",
-    "moment": "^2.30.1",
+    "moment": "^2.22.2",
+    "sass": "^1.45.0",
     "postcss-loader": "^2.1.6",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-draft-wysiwyg": "^1.15.0",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-draft-wysiwyg": "^1.13.1",
     "react-dropzone-component": "^3.2.0",
     "react-html-parser": "^2.0.2",
-    "react-modal": "^3.16.1",
-    "react-redux": "7.2.0",
-    "react-router": "5.1.2",
-    "react-router-dom": "5.1.2",
+    "react-modal": "^3.8.1",
+    "react-redux": "5.0.6",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.3.1",
     "react-truncate": "^2.4.0",
-    "redux": "4.0.5",
-    "sass": "^1.54.0",
+    "redux": "^3.7.2",
     "sass-loader": "^7.1.0",
-    "striptags": "^3.2.0",
-    "webpack": "4.42.1",
-    "webpack-cli": "3.3.11",
-    "webpack-dev-middleware": "3.7.2",
-    "webpack-dev-server": "3.10.3",
-    "webpack-hot-middleware": "2.25.0",
-    "webpack-merge": "4.2.2"
+    "striptags": "^3.1.1",
+    "style-loader": "^0.21.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dev-middleware": "^3.1.3",
+    "webpack-dev-server": "^3.1.14",
+    "webpack-hot-middleware": "^2.22.3",
+    "webpack-merge": "^4.1.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "style-loader": "^1.3.0",
-    "terser-webpack-plugin": "^1.4.5",
-    "uglifyjs-webpack-plugin": "^1.2.7"
+    "uglifyjs-webpack-plugin": "^1.2.7",
+    "webpack": "^4.16.4"
   }
 }
